# ntcip

./: .rustfmt.toml  Cargo.toml  README.md
examples/: graphic.rs  pages.rs  render.rs
src/: lib.rs
src/dms/: base64.rs  config.rs  font.rs  graphic.rs  mod.rs  multi.rs  oer.rs  pattern.rs  render.rs  sign.rs
src/dms/font/: ifnt.rs  mod.rs  tfon.rs
test/: F02.ifnt  F02.tfon  F07-C.tfon  F07-L.tfon  F07.tfon  F08.tfon  font.json
