[package]
name = "ntcip"
version = "0.12.1"
description = "NTCIP: National Transportation Communications for ITS Protocol"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ntcip"
repository = "https://github.com/mnit-rtmc/ntcip"
readme = "README.md"
edition = "2021"

[dependencies]
crc = "3"
enumflags2 = "0.7"
fstr = "0.2"
log = "0.4"
pix = "0.13"
tfon = "0.1"
thiserror = "1"
