[package]
name = "ntcip"
version = "0.14.1"
description = "NTCIP: National Transportation Communications for ITS Protocol"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ntcip"
repository = "https://github.com/mnit-rtmc/ntcip"
readme = "README.md"
keywords = ["highway", "road", "road-sign", "transportation", "transport"]
categories = ["rendering"]
edition = "2024"

[dependencies]
crc = "3.2.0"
enumflags2 = "0.7"
fstr = "0.2"
log = "0.4"
pix = "0.14"
tfon = "0.2"
thiserror = "2"
